# action-ansible

./: Dockerfile  action.yml  main.py  pyproject.toml
testproject/: playbook.yml
testproject/inventory/: inventory.yml
