[tool.poetry]
name = "action-ansible"
version = "0.0.1"
description = ""
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.12"
ansible = "^5.8.0"
ansible-runner = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
